implement stats display

--- a/client/src/components/MainScreen.module.css
+++ b/client/src/components/MainScreen.module.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   width: 1024px;
   height: 768px;
-  background-color: gray;
+  background-color: #514573;
   align-items: start;
   justify-content: start;
   padding: 15px;
