--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,3 @@
-main {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 1em;
-}
-
 .leftSideSplit {
   height: 100%;
   display: flex;
@@ -19,4 +11,5 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 15px;
 }
