--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,14 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
+@media (max-width: 767px) {
+  * {
+    cursor: none;
+  }
+}
