--- a/client/src/components/Button.module.css
+++ b/client/src/components/Button.module.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
   width: 175px;
   height: 100px;
   font-size: 24px;
