--- a/client/src/components/AdminScreen.module.css
+++ b/client/src/components/AdminScreen.module.css
@@ -1,3 +1,19 @@
+.adminScreen {
+  z-index: 1000;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  display: flex;
+  flex-direction: row;
+  width: 1024px;
+  height: 768px;
+  background-color: rgba(92, 13, 19, 0.95);
+  align-items: start;
+  justify-content: start;
+  padding: 15px;
+  gap: 15px;
+}
+
 .leftSideSplit {
   height: 100%;
   display: flex;
@@ -8,8 +24,10 @@
 
 .rightSideSplit {
   height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: space-between;
   gap: 15px;
 }
