--- a/client/src/components/Button.module.css
+++ b/client/src/components/Button.module.css
@@ -1,13 +1,28 @@
 .buttonBox {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+  position: relative;
   width: 175px;
   height: 100px;
-  font-size: 24px;
-  font-weight: bold;
-  color: white;
   background-color: #777;
   border-radius: 8px;
+  cursor: crosshair;
+}
+
+.displayTextContainer {
+  display: flex;
+  padding: 8px;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  font-size: 22px;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+}
+
+.buttonOverlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
 }
